--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <h3 class="nav-title">Me<span class="main-title-color">r</span>y</h3>
         <ul>
@@ -22,6 +22,19 @@
           <li><button class="btn-primary">Hire Me</button></li>
         </ul>
       </nav>
+      <div class="banner">
+        <div class="banner-text">
+          <h3 class="banner-one">Hi, I am</h3>
+          <h3 class="banner-two">Mary Hardy</h3>
+          <p>
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">Contact</button>
+        </div>
+        <img class="hero-img" src="images/hardy.png" alt="" />
+      </div>
     </header>
     <main></main>
     <footer></footer>
