--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           developing simple, clean and slick websites that provide real value to
           the end user. Thousands of clients have procured exceptional resulfs
           while working with me. Delivering work within time and budget which
-          meets clients requirements in our mata. Hello
+          meets clients requirements in our mata.
         </p>
       </section>
     </main>
