added resume section

--- a/index.html
+++ b/index.html
@@ -113,7 +113,78 @@
           </div>
         </div>
       </section>
-
+      <section class="resume-summary">
+        <h3 class="section-title">A summary of My Resume</h3>
+        <div class="resume-container">
+          <div class="resume-colum1">
+            <div class="resume-content">
+              <h2 class="resume-heading">My Education</h2>
+              <h3 class="resume-title">Master in Computer Engineering</h3>
+              <h4 class="resume-subtitle">Harvard University / 2015 - 2017</h4>
+              <p class="resume-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-content">
+              <h3 class="resume-title">Master in Computer Engineering</h3>
+              <h4 class="resume-subtitle">Harvard University / 2015 - 2017</h4>
+              <p class="resume-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-content">
+              <h3 class="resume-title">Master in Computer Engineering</h3>
+              <h4 class="resume-subtitle">Harvard University / 2015 - 2017</h4>
+              <p class="resume-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <div class="resume-colum2">
+            <h2 class="resume-heading">My Experience</h2>
+            <div class="resume-content">
+              <h3 class="resume-title">Sr. Font End Developer</h3>
+              <h4 class="resume-subtitle">Apple Inc / 2020 - Current</h4>
+              <p class="resume-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-content">
+              <h3 class="resume-title">Jr. Font End Developer</h3>
+              <h4 class="resume-subtitle">Dribbble Inc / 2018 - 2022</h4>
+              <p class="resume-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-content">
+              <h3 class="resume-title">HTML Developer</h3>
+              <h4 class="resume-subtitle">Adobe Inc / 2017 - 2018</h4>
+              <p class="resume-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="button-cv">
+          <button class="btn-primary">Download CV</button>
+        </div>
+      </section>
       <!-- What I Do Section End -->
     </main>
     <footer></footer>
