--- a/index.html
+++ b/index.html
@@ -187,6 +187,34 @@
       </section>
       <!-- What I Do Section End -->
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-column">
+        <h3 class="footer-title">Lets Connect</h3>
+        <p class="footer-description">
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div class="footer-social-image">
+          <a href=""><img src="images/icons/facebook.png" alt="" /></a>
+          <a href=""><img src="images/icons/twitter.png" alt="" /></a>
+          <a href=""><img src="images/icons/insta.png" alt="" /></a>
+        </div>
+      </div>
+      <div class="footer-column">
+        <h3 class="footer-title">Let’s Message me</h3>
+        <form action="" class="contact">
+          <input type="text" name="" placeholder="Name" id="" />
+          <input type="email" name="" placeholder="Email" id="" />
+          <textarea
+            name=""
+            placeholder="Message"
+            id=""
+            cols="30"
+            rows="10"
+          ></textarea>
+          <input type="submit" class="btn-primary" value="Submit" />
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
